# propcache

./: .codecov.yml  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  AGENTS.md  CHANGES.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  towncrier.toml  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/reusables/tox-dev/workflow/reusable-tox/hooks/post-src-checkout/: action.yml
.github/reusables/tox-dev/workflow/reusable-tox/hooks/post-tox-run/: action.yml
.github/workflows/: ci-cd.yml  reusable-build-wheel.yml  reusable-linters.yml
CHANGES/: 103.bugfix.rst  109.doc.rst  118.packaging.rst  121.feature.rst  130.feature.rst  133.contrib.rst  140.contrib.rst  155.contrib.rst  16.doc.rst  162.bugfix.rst  184.packaging.rst  19.breaking.rst  19.packaging.rst  193.feature.rst  200.feature.rst  207.packaging.rst  214.packaging.rst  217.doc.rst  218.packaging.rst  22.packaging.rst  223.breaking.removal.rst  223.breaking.rst  223.packaging.rst  229.packaging.rst  231.contrib.rst  232.contrib.rst  233.contrib.rst  235.contrib.rst  236.contrib.rst  239.contrib.rst  24.feature.rst  24.packaging.rst  243.contrib.rst  245.bugfix.rst  246.contrib.rst  251.contrib.rst  26.bugfix.rst  37.packaging.rst  38.feature.rst  5.feature.rst  (+6 more)
docs/: Makefile  api.rst  changes.rst  conf.py  index.rst  make.bat  spelling_wordlist.txt
docs/contributing/: guidelines.rst  release_guide.rst
packaging/pep517_backend/: _backend.py  _compat.py  _cython_configuration.py  _transformers.py  cli.py
propcache/: __init__.py  _helpers_c.pyx  api.py
requirements/: codspeed.txt  cython.txt  dev.txt  doc.txt  test-pure.txt  test.txt
scripts/: cibw_before_build.sh
src/propcache/: __init__.pxd  __init__.py  _helpers.py  _helpers_c.pxd  _helpers_c.pyx  _helpers_h.h  _helpers_py.py  _propcache_c.c  _propcache_c.pyi  _test_cythonapi.pyx  api.py
src/propcache/_propcachelib/: pc.h  propcache_objects.h  state.h
testcythonapi/: pyproject.toml
testcythonapi/testcythonapi/: api.pyi  api.pyx
tests/: conftest.py  test_api.py  test_base_cached_property.py  test_benchmarks.py  test_cached_property.py  test_cython_api.py  test_init.py  test_under_cached_property.py  test_under_cached_property_with_name.py
tools/: upgrade_pythoncapi.py
