[bdist_wheel]
# wheels should be OS-specific:
# their names must contain macOS/manulinux1/2010/2014/Windows identifiers
universal = 0

[metadata]
name = propcache
version = attr: propcache.__version__
url = https://github.com/aio-libs/propcache
project_urls =
  Chat: Matrix = https://matrix.to/#/#aio-libs:matrix.org
  Chat: Matrix Space = https://matrix.to/#/#aio-libs-space:matrix.org
  CI: GitHub Workflows = https://github.com/aio-libs/propcache/actions?query=branch:master
  Code of Conduct = https://github.com/aio-libs/.github/blob/master/CODE_OF_CONDUCT.md
  Coverage: codecov = https://codecov.io/github/aio-libs/propcache
  Docs: Changelog = https://propcache.readthedocs.io/en/latest/changes/
  Docs: RTD = https://propcache.readthedocs.io
  GitHub: issues = https://github.com/aio-libs/propcache/issues
  GitHub: repo = https://github.com/aio-libs/propcache
description = Accelerated property cache
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Andrew Svetlov
author_email = andrew.svetlov@gmail.com
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache-2.0
license_files =
  LICENSE
  NOTICE
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Programming Language :: Cython
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Programming Language :: Python :: 3.14

  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development :: Libraries :: Python Modules
keywords =
  cython
  cext
  propcache

[options]
python_requires = >=3.9
# Ref:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
# (`src/` layout)
package_dir =
    =src
packages =
  propcache

# https://setuptools.pypa.io/en/latest/deprecated/zip_safe.html
zip_safe = False
include_package_data = True

[options.package_data]
# Ref:
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
# (see notes for the asterisk/`*` meaning)
* =
  *.so
  *.pyd
  *.pyx

[options.exclude_package_data]
* =
  *.c
  *.h

[pep8]
max-line-length=79

[flake8]
extend-select = B950
ignore = E203,E301,E302,E501,E704,W503,W504,F811
max-line-length = 88

# Allow certain violations in certain files:
per-file-ignores =

  # F401   imported but unused
  packaging/pep517_backend/hooks.py: F401

[isort]
profile=black
