[project]
name = "testcythonapi"
version = "0.1.0"
description = "Test Module for testing propcache cython api DO NOT UPLOAD TO PYPI!!!"
requires-python = ">=3.9"
classifiers = [
    "Private :: Do Not Upload"
]

[build-system]
# TODO: We need to find a better way to hack in propcache
# get it to compile using the relative path aka parent directory.
# The only problem now is hacking it in to prove it compiles
requires = ["setuptools", "cython", "propcache @ git+https://github.com/Vizonex/propcache@cython-support"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
    {name = "testcythonapi.api", sources = ["testcythonapi/api.pyx"]}
]
